[project]
name = "repro-tracker"
version = "0.1.0"
description = "OpenAI-powered bug reproduction agent that parses reports, executes them in an isolated E2B sandbox, and returns reproducibility results with evidence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[e2b]>=0.17.6",
    "python-dotenv>=1.2.2",
]